# Google-TurboQuant-Algorithm

./: .gitignore  README.md  pyproject.toml
docs/: 01-turboquant-explained.md  02-replication-landscape.md  03-stack-and-roadmap.md  04-how-to-replicate-papers.md  05-feasibility.md  06-issues-register.md  07-github-landscape-findings.md  08-ab-test-protocol.md
scripts/: run_phase0.py  run_phase1.py  run_phase2.py  run_phase2_prod_diagnostic.py  run_phase3.py  run_phase4.py
src/turboquant/: __init__.py  attention.py  kvcache.py  metrics.py  qjl.py  quantizers.py  rotation.py  scalar_quant.py  search.py
tests/: test_attention.py  test_distortion.py  test_kvcache.py  test_rotation.py  test_search.py  test_unbiased.py
